--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <tr>
         <td width="659" valign="top" class="em-mob-wrap em-mob-width-100perc">
 <table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
-  <a href="https://fenix-fest.ru/star" target="_blank"><img src="https://img.us12.besteml.com/en/v5/user-files?userId=5476149&resource=himg&disposition=inline&name=63q6sa44afq84x4f13ygpd9ycauc3rsdueo1o17kgrnh6yiif831jzhg4jyqekeru8qfkaywesje86omenqfkjgsf4cenp8e8e5zer1ewz6y57wa8x51em8qozuodnqnbwi75aud6s4cu71g15e1abs1nba" width="659" border="0" alt="Сайт" style="display: block; width: 100%; max-width: 659px;"></a>
+  <a href="https://fenix-fest.ru/star" target="_blank"><img src="https://img.us12.besteml.com/en/v5/user-files?userId=5476149&resource=himg&disposition=inline&name=6seezr8fzkqsiu4f13ygpd9ycauc3rsdueo1o17kgrnh6yiif831jzhg4jyqekeru7odgzspbtubeidxbdi7yee9j85gbo3uewsa3ac4t9wbba91ec666wmjg6xsqn57ob5xg441bgtrrk4bfxtsf5rasjw" width="659" border="0" alt="Сайт" style="display: block; width: 100%; max-width: 659px;"></a>
 </td></tr></table>
 </td>
       </tr></table>
@@ -131,11 +131,13 @@
   <div style="font-family: Helvetica, Roboto, Arial, sans-serif; font-size: 22px; line-height: 32px; color: #ba2c26;" align="center"><strong>В&nbsp;жюри ТОПОВЫЕ педагоги по&nbsp;вокалу</strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px; padding-bottom: 20px;">
   <div style="font-family: Helvetica, Roboto, Arial, sans-serif; line-height: 36px; color: #000000; font-size: 22px;" align="center"><b>ОНЛАЙН-КОНФЕРЕНЦИЯ С&nbsp;ЧЛЕНАМИ ЖЮРИ</b></div>
+</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
+  <a href="https://fenix-fest.ru/star" target="_blank"><img src="https://img.us12.besteml.com/en/v5/user-files?userId=5476149&resource=himg&disposition=inline&name=63m1gkgz4ezpzm4f13ygpd9ycauc3rsdueo1o17kgrnh6yiif831jzhg4jyqekeru9najr318nb3c8heknhh9ugphwxsknd4t8hx53zgdk8wc4rrgci9cqoxc1u7ywn639z3satc7gigokpws6kd7fksjqo" width="659" border="0" alt="Сайт" style="display: block; width: 100%; max-width: 659px;"></a>
 </td></tr></table></td>
       </tr></table>
   </td>
 </tr><tr em="block" class="em-structure">
-  <td align="center" style="padding-right: 30px; padding-bottom: 21px; padding-left: 30px; background-color: #ffffff;" class="em-mob-padding_left-20 em-mob-padding_right-20 em-mob-text_align-center em-mob-padding_bottom-21" bgcolor="#FFFFFF">
+  <td align="center" style="padding: 20px 30px; background-color: #ffffff;" class="em-mob-padding_left-20 em-mob-padding_right-20 em-mob-text_align-center em-mob-padding_bottom-21" bgcolor="#FFFFFF">
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="290" valign="top" class="em-mob-wrap em-mob-width-100perc">
